# agents-rules

./: .gitignore  CLAUDE.md  DEVELOP.md  README.md  pyproject.toml
.agent-pack/: task-management.md
.agentpack/: agentpack.yaml
.agentpack/rules/: AGENTS.md  first-principles.md
.agentpack/skills/commit-code/: SKILL.md
.agentpack/skills/design-spec/: SKILL.md
.agentpack/skills/docs-update/: SKILL.md
.agentpack/skills/task-do/: SKILL.md
.agentpack/skills/task-init/: SKILL.md
docs/: discovery.md  functional-spec.md  user-guide.md
src/agent_pack/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
